text fixed dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,6 @@
 
 @layer base{
     body {
-        @apply dark:bg-stone-500 bg-stone-200 text-black dark:text-stone-200 
+        @apply bg-stone-200 text-black dark:text-black 
     }
 }
